src/main/org/freemarker/docgen/statics/docgen.css
/* ... */
.content-wrapper .col-right {
  -webkit-box-flex: 1;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}
.page-content {
  padding-bottom: 42px;
}
.page-content a {
  word-break: break-word;
}
@media (min-width: 768px) {
  .page-content .page-title {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-box-align: baseline;
    -webkit-align-items: baseline;
    -ms-flex-align: baseline;
    align-items: baseline;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}
.page-content .page-title h1 {
  margin: 0;
  font-size: 18px;
}
@media (min-width: 768px) {
  .page-content .page-title h1 {
    font-size: 21px;
  }
}
@media (min-width: 992px) {
  .page-content .page-title h1 {
    font-size: 30px;
  }
}
.page-content .page-title .subtitle {
  display: block;
  font-size: 14px;
}
@media (min-width: 768px) {
  .page-content .page-title .subtitle {
    font-size: 24px;
  }
}
.page-content .active {
  font-weight: bold;
}
.page-content .active::before {
  font-family: 'icomoon';
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  content: "\e605";
  margin-left: -20px;
  font-weight: normal;
  opacity: 0;
  position: absolute;
  line-height: 31px;
  font-size: 18px;
  color: #C82222;
  width: 18px;
  -webkit-animation: header-pulse 2s;
  animation: header-pulse 2s;
}
@-webkit-keyframes header-pulse {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
@keyframes header-pulse {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
.site-footer {
  border-top: 3px solid #003270;
  background-color: #0050b2;
  background-image: -webkit-radial-gradient(50% -50px, ellipse, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 24%, #000c3b 86%, #000c3b 100%), url(img/patterned-bg.png);
  background-image: radial-gradient(ellipse at 50% -50px, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 24%, #000c3b 86%, #000c3b 100%), url(img/patterned-bg.png);
  color: #fff;
}
.site-footer a {
  color: #fff;
}
.site-footer a:hover {
  color: rgba(255, 255, 255, 0.8);
}
.footer-top {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}
@media (min-width: 992px) {
  .footer-top {
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
  }
}
.footer-top .col-left {
  -webkit-box-flex: 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}
.footer-top .col-right {
  padding-top: 12px;
  padding-bottom: 12px;
  -webkit-box-flex: 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}
@media (min-width: 992px) {
  .footer-top .col-right {
    padding-top: 24px;
  }
}
.footer-top .col-left {
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
}
@media (min-width: 992px) {
  .footer-top .col-right {
    text-align: right;
  }
}
.sitemap {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}
.sitemap .column {
  padding-top: 12px;
  padding-bottom: 12px;
  margin-right: 12px;
  -webkit-box-flex: 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}
@media (min-width: 992px) {
  .sitemap .column {
    padding-top: 24px;
  }
}
.sitemap .column:last-child {
  margin-right: 0;
}
@media (min-width: 768px) {
  .sitemap .column {
    margin-right: 54px;
  }
}
.sitemap .column .column-header {
  color: #fff;
  border-bottom: 2px solid #4c76ab;
  margin: 0 0 6px;
  padding-bottom: 6px;
}
.sitemap .column ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}
.sitemap .column a {
  padding-right: 9px;
  display: block;
}
.xxe {
  display: inline-block;
  width: 110px;
  height: 34px;
  margin-top: 15px;
  background: #ffffff url(img/xxe.png) 50% no-repeat;
  border: 1px solid #002254;
}
.xxe span {
  display: none;
}
.footer-bottom {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 45px 0 30px;
}
.footer-bottom p {
  margin: 0 0 6px;
  -webkit-box-flex: 0;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}
.footer-bottom .last-updated {
  font-size: 12px;
  display: block;
}
.logo {
  color: #fff;
  font-size: 30px;
  line-height: 1;
  padding: 6px 0 0;
  display: block;
}
.logo:hover {
  color: #fff;
}
.tabs {
  list-style-type: none;
  margin: 0;
  padding: 6px 0 0;
  text-align: center;
}
@media (min-width: 768px) {
  .tabs {
    margin-left: 24px;
    -webkit-box-flex: 0;
    -webkit-flex: 0 0 auto;
    -ms-flex: 0 0 auto;
    flex: 0 0 auto;
    padding-top: 0;
  }
}
.tabs li {
  display: inline-block;
}
.tabs li.current a {
  color: #fff;
  font-weight: 500;
}
.tabs li:after {
  width: 1px;
  background-color: #96a5b8;
  height: 9px;
  display: inline-block;
  content: '';
  margin: 0 15px;
}
.tabs li:last-child:after {
  display: none;
}
.tabs li a {
  color: #c9dbf1;
}
.tabs li a:hover {
  color: #fff;
}
.notices {
  margin: 0;
  display: none;
}
@media (min-width: 768px) {
  .notices {
    display: block;
    text-align: right;
    -webkit-box-flex: 1;
    -webkit-flex: 1 0 auto;
    -ms-flex: 1 0 auto;
    flex: 1 0 auto;
  }
}
.notices a {
  color: #fff;
}
/* ... */

